[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["zkan <zkan.cs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
django-extensions = "^2.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest-django = "^3.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
